src/imgui.nim

proc igSliderScalarN*(label: ptr int8, data_type: ImGuiDataType, v: pointer, components: int32, v_min: pointer, v_max: pointer, format: ptr int8, power: float32): bool {.importc: "igSliderScalarN".}
proc igSmallButton*(label: ptr int8): bool {.importc: "igSmallButton".}
proc igSpacing*(): void {.importc: "igSpacing".}
proc igStyleColorsClassic*(dst: ptr ImGuiStyle): void {.importc: "igStyleColorsClassic".}
proc igStyleColorsDark*(dst: ptr ImGuiStyle): void {.importc: "igStyleColorsDark".}
proc igStyleColorsLight*(dst: ptr ImGuiStyle): void {.importc: "igStyleColorsLight".}
proc igText*(fmt: ptr int8): void {.importc: "igText", varargs.}
proc igTextColored*(col: ImVec4, fmt: ptr int8): void {.importc: "igTextColored", varargs.}
proc igTextColoredV*(col: ImVec4, fmt: ptr int8): void {.importc: "igTextColoredV", varargs.}
proc igTextDisabled*(fmt: ptr int8): void {.importc: "igTextDisabled", varargs.}
proc igTextDisabledV*(fmt: ptr int8): void {.importc: "igTextDisabledV", varargs.}
proc igTextUnformatted*(text: ptr int8, text_end: ptr int8): void {.importc: "igTextUnformatted".}
proc igTextV*(fmt: ptr int8): void {.importc: "igTextV", varargs.}
proc igTextWrapped*(fmt: ptr int8): void {.importc: "igTextWrapped", varargs.}
proc igTextWrappedV*(fmt: ptr int8): void {.importc: "igTextWrappedV", varargs.}
proc igTreeAdvanceToLabelPos*(): void {.importc: "igTreeAdvanceToLabelPos".}
proc igTreeNode*(label: ptr int8): bool {.importc: "igTreeNode".}
proc igTreeNode*(str_id: ptr int8, fmt: ptr int8): bool {.importc: "igTreeNode", varargs.}
proc igTreeNode*(ptr_id: pointer, fmt: ptr int8): bool {.importc: "igTreeNode", varargs.}
proc igTreeNodeEx*(label: ptr int8, flags: ImGuiTreeNodeFlags): bool {.importc: "igTreeNodeEx".}
proc igTreeNodeEx*(str_id: ptr int8, flags: ImGuiTreeNodeFlags, fmt: ptr int8): bool {.importc: "igTreeNodeEx", varargs.}
proc igTreeNodeEx*(ptr_id: pointer, flags: ImGuiTreeNodeFlags, fmt: ptr int8): bool {.importc: "igTreeNodeEx", varargs.}
proc igTreeNodeExV*(str_id: ptr int8, flags: ImGuiTreeNodeFlags, fmt: ptr int8): bool {.importc: "igTreeNodeExV", varargs.}
proc igTreeNodeExV*(ptr_id: pointer, flags: ImGuiTreeNodeFlags, fmt: ptr int8): bool {.importc: "igTreeNodeExV", varargs.}
proc igTreeNodeV*(str_id: ptr int8, fmt: ptr int8): bool {.importc: "igTreeNodeV", varargs.}
proc igTreeNodeV*(ptr_id: pointer, fmt: ptr int8): bool {.importc: "igTreeNodeV", varargs.}
proc igTreePop*(): void {.importc: "igTreePop".}
proc igTreePush*(str_id: ptr int8): void {.importc: "igTreePush".}
proc igTreePush*(ptr_id: pointer): void {.importc: "igTreePush".}
proc igUnindent*(indent_w: float32): void {.importc: "igUnindent".}
proc igVSliderFloat*(label: ptr int8, size: ImVec2, v: ptr float32, v_min: float32, v_max: float32, format: ptr int8, power: float32): bool {.importc: "igVSliderFloat".}
proc igVSliderInt*(label: ptr int8, size: ImVec2, v: ptr int32, v_min: int32, v_max: int32, format: ptr int8): bool {.importc: "igVSliderInt".}
proc igVSliderScalar*(label: ptr int8, size: ImVec2, data_type: ImGuiDataType, v: pointer, v_min: pointer, v_max: pointer, format: ptr int8, power: float32): bool {.importc: "igVSliderScalar".}
proc igValue*(prefix: ptr int8, b: bool): void {.importc: "igValue".}
proc igValue*(prefix: ptr int8, v: int32): void {.importc: "igValue".}
proc igValue*(prefix: ptr int8, v: uint32): void {.importc: "igValue".}
proc igValue*(prefix: ptr int8, v: float32, float_format: ptr int8): void {.importc: "igValue".}

{.pop.}
